# Android-Build

./: .gitmodules  README.md
01_android_executable/: readme.txt
01_android_executable/cmake/: test.cmake
01_android_executable/src/: CMakeLists.txt
02_android_boost_test/cmake/: test.cmake
02_android_boost_test/src/: CMakeLists.txt  test.cpp
